test/spec_vectors/simd_i16x8_extadd_pairwise_i8x16/fail/module_4.wat
(module (func $i16x8.extadd_pairwise_i8x16_u-arg-empty (result v128) (i16x8.extadd_pairwise_i8x16_u)))